# Rust_Web_API

./: Cargo.toml  README.md
src/: main.rs
src/lib/: mod.rs  server.rs
src/lib/controllers/: contact.rs  health.rs  mod.rs
src/lib/repositories/: mod.rs
src/lib/services/: contact.rs  mod.rs
