[package]
name = "contacts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="app"
path="src/lib/mod.rs"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json", "uuid", "tls", "secrets"] }
thiserror = "1.0.48"
serde_json = "1.0.107"